# sarc360-backend

./: .env  .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_gate1_new_tables.py  001b_create_operational_tables.py  002_gate2_alter_existing.py  564627d65c6d_production_complete.py  67395b656de2_add_overtime_multiplier_to_pay_rates.py  97e36c30db14_production_complete.py  a1b2c3d4e5f6_phase1_rbac_tables.py
app/: main.py
app/core/: config.py  database.py  deps.py  security.py
app/crud/: employee.py  invoice.py  payroll.py  project.py  timesheet.py
app/models/: __init__.py  audit.py  base.py  client.py  contract.py  cost_engine.py  employee.py  expense.py  invoice.py  payroll.py  project.py  project_pl.py  rbac.py  supplier.py  tenant.py  timesheet.py  user.py
app/routers/: auth.py  clients.py  contracts.py  cost_engine.py  dashboard.py  employees.py  expenses.py  imports.py  invoices.py  payroll.py  projects.py  rbac.py  suppliers.py  timesheets.py
app/schemas/: auth.py  client.py  contract.py  cost_engine.py  dashboard.py  employee.py  expense.py  invoice.py  payroll.py  project.py  supplier.py  timesheet.py
app/services/: audit.py  excel_service.py  import_service.py  invoice_service.py  permissions.py  timesheet_workflow.py
deploy/: .env.production  DEPLOYMENT_GUIDE.md
deploy/nginx/: nginx.conf
docs/: MASTER_PROMPT_DELIVERABLE.md
scripts/: seed_demo.py  seed_full.py  seed_production.py
tests/: e2e_test.py  test_full_flow.py
