[tool.poetry]
name = "sarc360-backend"
version = "1.0.0"
description = "ERP backend for Sama Al Rawabi Contracting Co. — Al-Khobar, KSA"
authors = ["SARC Tech Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.30"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.29"
alembic = "^1.13"
pydantic = "^2.7"
pydantic-settings = "^2.3"
python-jose = {extras = ["cryptography"], version = "^3.3"}
passlib = {extras = ["bcrypt"], version = "^1.7"}
python-multipart = "^0.0.9"
celery = {extras = ["redis"], version = "^5.4"}
redis = "^5.0"
httpx = "^0.27"
hijri-converter = "^2.3"
cryptography = "^42"
openpyxl = "^3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
pytest-asyncio = "^0.23"
factory-boy = "^3.3"
coverage = "^7"
ruff = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"
